--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -22,7 +22,6 @@ sFormNameLeft =
 sSelectedItemFormLeft =
 sResetSlot = 
 
-
 [HudSetting]
 sDisplayResolutionWidth =
 sDisplayResolutionHeight = 
@@ -34,7 +33,6 @@ fHudSlotPositionOffset = 105.000000
 fHudKeyPositionOffset = 38.000000
 fKeyIconScaleWidth = 0.380000
 fKeyIconScaleHeight = 0.380000
-uIconOpacity = 125
 fIconScaleWidth = 0.100000
 fIconScaleHeight = 0.100000
 uSlotButtonFeedback = 200
@@ -43,6 +41,13 @@ fSlotCountTextFontSize = 20
 bDrawToggleButton = 1
 fToggleKeyOffsetX = 115
 fToggleKeyOffsetY = 115
+
+[GraphicSetting]
+uBackgroundTransparency = 255
+uBackgroundIconTransparency = 255
+uIconTransparency = 125
+uKeyTransparency = 255
+uTextTransparency = 255
 
 [MiscSetting]
 bActionCheck = 0
