--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -6,6 +6,7 @@ uLeftActionKey = 13
 uToggleKey = 27
 uControllerSet = 0
 fConfigButtonHoldTime = 5
+bDrawToggleButton = 1
 
 [Page]
 uPageList = 0
@@ -38,9 +39,12 @@ fIconScaleHeight = 0.100000
 uSlotButtonFeedback = 200
 fSlotCountTextOffset = 10
 fSlotCountTextFontSize = 20
-bDrawToggleButton = 1
 fToggleKeyOffsetX = 115
 fToggleKeyOffsetY = 115
+fCurrentItemsOffsetX = -400.000000
+fCurrentItemsOffsetY = 130.000000
+fCurrentItemsFontSize = 20.000000
+bDrawCurrentItemsText = 0
 
 [GraphicSetting]
 uBackgroundTransparency = 255
@@ -48,6 +52,9 @@ uBackgroundIconTransparency = 255
 uIconTransparency = 125
 uKeyTransparency = 255
 uTextTransparency = 255
+uCurrentItemsRed = 255
+uCurrentItemsGreen = 255
+uCurrentItemsBlue = 255
 
 [MiscSetting]
 bActionCheck = 0
