--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -768,6 +768,15 @@
                     "valueOptions": {
                         "sourceType": "ModSettingBool"
                     }
+                },
+                {
+                    "id": "bAlternativeEmptyHandEquip:MiscSetting",
+                    "text": "$LamasTinyHUD_AlternativeEmptyHandEquip_OptionText",
+                    "type": "toggle",
+                    "help": "$LamasTinyHUD_AlternativeEmptyHandEquip_InfoText",
+                    "valueOptions": {
+                        "sourceType": "ModSettingBool"
+                    }
                 }
             ]
         }
