--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -60,5 +60,6 @@ uCurrentItemsBlue = 255
 bActionCheck = 0
 bEmptyHandSetting = 1
 bHideOutsideCombat = 0
+fFadeTimerOutsideCombat = 5
 bDisableInputQuickLoot = 0
 uMaxPageCount = 2
