--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -36,7 +36,7 @@ fKeyIconScaleWidth = 0.380000
 fKeyIconScaleHeight = 0.380000
 fIconScaleWidth = 0.100000
 fIconScaleHeight = 0.100000
-uSlotButtonFeedback = 200
+uSlotButtonFeedback = 175
 fSlotCountTextOffset = 10
 fSlotCountTextFontSize = 20
 fToggleKeyOffsetX = 115
@@ -52,6 +52,7 @@ uBackgroundIconTransparency = 255
 uIconTransparency = 125
 uKeyTransparency = 255
 uTextTransparency = 255
+uIconTransparencyBlocked = 50
 uCurrentItemsRed = 255
 uCurrentItemsGreen = 255
 uCurrentItemsBlue = 255
@@ -62,5 +63,5 @@ bEmptyHandSetting = 1
 bHideOutsideCombat = 0
 fFadeTimerOutsideCombat = 5
 bDisableInputQuickLoot = 0
-bElderDemonSouls = 0
+bElderDemonSouls = 1
 uMaxPageCount = 2
