--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -36,15 +36,13 @@ fKeyIconScaleWidth = 0.380000
 fKeyIconScaleHeight = 0.380000
 fIconScaleWidth = 0.100000
 fIconScaleHeight = 0.100000
-uSlotButtonFeedback = 175
 fSlotCountTextOffset = 20
-fSlotCountTextFontSize = 20
 fToggleKeyOffsetX = 115
 fToggleKeyOffsetY = 115
 fCurrentItemsOffsetX = -400.000000
 fCurrentItemsOffsetY = 130.000000
-fCurrentItemsFontSize = 20.000000
-bDrawCurrentItemsText = 0
+fSlotItemNameOffsetX = -65
+fSlotItemNameOffsetY = 65
 
 [GraphicSetting]
 uBackgroundTransparency = 255
@@ -56,6 +54,10 @@ uIconTransparencyBlocked = 50
 uCurrentItemsRed = 255
 uCurrentItemsGreen = 255
 uCurrentItemsBlue = 255
+fSlotCountTextFontSize = 20
+fCurrentItemsFontSize = 20.000000
+uSlotButtonFeedback = 175
+bDrawCurrentItemsText = 0
 
 [MiscSetting]
 bActionCheck = 0
@@ -64,4 +66,4 @@ bHideOutsideCombat = 0
 fFadeTimerOutsideCombat = 5
 bDisableInputQuickLoot = 0
 bElderDemonSouls = 1
-uMaxPageCount = 2
+uMaxPageCount = 4
