--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -54,6 +54,9 @@ uIconTransparencyBlocked = 50
 uCurrentItemsRed = 255
 uCurrentItemsGreen = 255
 uCurrentItemsBlue = 255
+uSlotCountRed = 255
+uSlotCountGreen = 255
+uSlotCountBlue = 255
 fSlotCountTextFontSize = 20
 fCurrentItemsFontSize = 20.000000
 uSlotButtonFeedback = 175
