--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -55,6 +55,9 @@ uTextTransparency = 255
 uCurrentItemsRed = 255
 uCurrentItemsGreen = 255
 uCurrentItemsBlue = 255
+uSlotCountRed = 255
+uSlotCountGreen = 255
+uSlotCountBlue = 255
 
 [MiscSetting]
 bActionCheck = 0
