--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -7,6 +7,8 @@ uToggleKey = 27
 uControllerSet = 0
 fConfigButtonHoldTime = 5
 bDrawToggleButton = 1
+uConfigPosition = 0
+sTriggerConfig = 
 
 [Page]
 uPageList = 0
