--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -28,23 +28,30 @@ sResetSlot =
 [HudSetting]
 sDisplayResolutionWidth =
 sDisplayResolutionHeight = 
-fHudImageScaleWidth = 0.230000
-fHudImageScaleHeight = 0.230000
-fHudImagePositionWidth = 140.000000
-fHudImagePositionHeight = 140.000000
-fHudSlotPositionOffset = 105.000000
-fHudKeyPositionOffset = 38.000000
-fKeyIconScaleWidth = 0.380000
-fKeyIconScaleHeight = 0.380000
-fIconScaleWidth = 0.100000
-fIconScaleHeight = 0.100000
+fHudImageScaleWidth = 0.23
+fHudImageScaleHeight = 0.23
+fHudImagePositionWidth = 200
+fHudImagePositionHeight = 775
+fHudSlotPositionOffset = 105
+fHudKeyPositionOffset = 38
+fKeyIconScaleWidth = 0.38
+fKeyIconScaleHeight = 0.38
+fIconScaleWidth = 0.1
+fIconScaleHeight = 0.1
 fSlotCountTextOffset = 20
 fToggleKeyOffsetX = 115
 fToggleKeyOffsetY = 115
-fCurrentItemsOffsetX = -400.000000
-fCurrentItemsOffsetY = 130.000000
-fSlotItemNameOffsetX = -65
+fCurrentItemsOffsetX = -45
+fCurrentItemsOffsetY = 200
+fSlotItemNameOffsetX = -45
 fSlotItemNameOffsetY = 65
+fArrowSlotOffsetX = -115
+fArrowSlotOffsetY = 115
+fHudArrowImageScaleWidth = 0.13
+fHudArrowImageScaleHeight = 0.13
+fArrowIconScaleWidth = 0.05
+fArrowIconScaleHeight = 0.05
+fArrowSlotCountTextOffset = 12
 
 [GraphicSetting]
 uBackgroundTransparency = 255
@@ -60,15 +67,17 @@ uSlotCountRed = 255
 uSlotCountGreen = 255
 uSlotCountBlue = 255
 fSlotCountTextFontSize = 20
-fCurrentItemsFontSize = 20.000000
+fCurrentItemsFontSize = 20
 uSlotButtonFeedback = 175
-bDrawCurrentItemsText = 0
+bDrawCurrentItemsText = 1
+fArrowCountFontSize = 20
 
 [MiscSetting]
 bActionCheck = 0
-bEmptyHandSetting = 1
+bEmptyHandSetting = 0
 bHideOutsideCombat = 0
 fFadeTimerOutsideCombat = 5
 bDisableInputQuickLoot = 0
 bElderDemonSouls = 1
 uMaxPageCount = 4
+uMaxAmmunitionType = 3
