--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -487,6 +487,58 @@
                     }
                 },
                 {
+                    "id": "fHudArrowImageScaleWidth:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowHudImageScaleWidth_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowHudImageScaleWidth_InfoText",
+                    "valueOptions": {
+                        "min": 0.02,
+                        "max": 5.0,
+                        "step": 0.01,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fHudArrowImageScaleHeight:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowHudImageScaleHeight_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowHudImageScaleHeight_InfoText",
+                    "valueOptions": {
+                        "min": 0.02,
+                        "max": 5.0,
+                        "step": 0.01,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fArrowIconScaleWidth:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowIconScaleWidth_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowIconScaleWidth_InfoText",
+                    "valueOptions": {
+                        "min": 0.01,
+                        "max": 2.0,
+                        "step": 0.01,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fArrowIconScaleHeight:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowIconScaleHeight_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowIconScaleHeight_InfoText",
+                    "valueOptions": {
+                        "min": 0.01,
+                        "max": 2.0,
+                        "step": 0.01,
+                        "formatString": "{2}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
                     "text": "$LamasTinyHUD_HudSetting_HeaderText_Offset",
                     "type": "header",
                     "position": 1
@@ -607,6 +659,45 @@
                         "formatString": "{0}",
                         "sourceType": "ModSettingFloat"
                     }
+                },
+                {
+                    "id": "fArrowSlotOffsetX:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowSlotOffsetX_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowSlotOffsetX_InfoText",
+                    "valueOptions": {
+                        "min": -500.0,
+                        "max": 500.0,
+                        "step": 1.0,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fArrowSlotOffsetY:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowSlotOffsetY_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowSlotOffsetY_InfoText",
+                    "valueOptions": {
+                        "min": -500.0,
+                        "max": 500.0,
+                        "step": 1.0,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fArrowSlotCountTextOffset:HudSetting",
+                    "text": "$LamasTinyHUD_HudSetting_ArrowSlotCountTextOffset_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_HudSetting_ArrowSlotCountTextOffset_InfoText",
+                    "valueOptions": {
+                        "min": 0.0,
+                        "max": 10.0,
+                        "step": 0.5,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
                 }
             ]
         },
@@ -696,7 +787,7 @@
                     }
                 },
                 {
-                    "text": "$LamasTinyHUD_GraphicSetting_Font_Color",
+                    "text": "$LamasTinyHUD_GraphicSetting_HeaderText_Font",
                     "type": "header"
                 },
                 {
@@ -717,6 +808,19 @@
                     "text": "$LamasTinyHUD_GraphicSetting_CurrentItemsFontSize_OptionText",
                     "type": "slider",
                     "help": "$LamasTinyHUD_GraphicSetting_CurrentItemsFontSize_InfoText",
+                    "valueOptions": {
+                        "min": 10.0,
+                        "max": 35.0,
+                        "step": 1.0,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingFloat"
+                    }
+                },
+                {
+                    "id": "fArrowCountFontSize:GraphicSetting",
+                    "text": "$LamasTinyHUD_GraphicSetting_ArrowCountFontSize_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_GraphicSetting_ArrowCountFontSize_InfoText",
                     "valueOptions": {
                         "min": 10.0,
                         "max": 35.0,
@@ -906,6 +1010,19 @@
                     "text": "$LamasTinyHUD_MiscSetting_MaxPageCount_OptionText",
                     "type": "slider",
                     "help": "$LamasTinyHUD_MiscSetting_MaxPageCount_InfoText",
+                    "valueOptions": {
+                        "min": 2,
+                        "max": 6,
+                        "step": 1,
+                        "formatString": "{0}",
+                        "sourceType": "ModSettingInt"
+                    }
+                },
+                {
+                    "id": "uMaxAmmunitionType:MiscSetting",
+                    "text": "$LamasTinyHUD_MiscSetting_MaxAmmunitionType_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_MiscSetting_MaxAmmunitionType_InfoText",
                     "valueOptions": {
                         "min": 2,
                         "max": 6,
