--- a/mcm/Config/LamasTinyHUD/config.json
+++ b/mcm/Config/LamasTinyHUD/config.json
@@ -129,6 +129,23 @@
                         "type": "CallFunction",
                         "function": "TriggerConfig"
                     }
+                },
+                {
+                    "text": "$LamasTinyHUD_Controls_MasterScale",
+                    "type": "header"
+                },
+                {
+                    "id": "fMasterScale:Controls",
+                    "text": "$LamasTinyHUD_Controls_MasterScale_OptionText",
+                    "type": "slider",
+                    "help": "$LamasTinyHUD_Controls_MasterScale_InfoText",
+                    "valueOptions": {
+                        "min": 0.2,
+                        "max": 3.0,
+                        "step": 0.1,
+                        "formatString": "{1}",
+                        "sourceType": "ModSettingFloat"
+                    }
                 }
             ]
         },
