--- a/mcm/Config/LamasTinyHUD/settings.ini
+++ b/mcm/Config/LamasTinyHUD/settings.ini
@@ -79,6 +79,6 @@ bEmptyHandSetting = 0
 bHideOutsideCombat = 0
 fFadeTimerOutsideCombat = 5
 bDisableInputQuickLoot = 0
-bElderDemonSouls = 1
+bEldenDemonSouls = 1
 uMaxPageCount = 4
 uMaxAmmunitionType = 3
